// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseline test equal expected output 1`] = `
Object {
  "DB_ENABLE_PROFILER": true,
  "DB_PASSWORD": "mypassword",
  "ENABLE_CORS": true,
  "EXAMPLE_ARRAY": Array [
    "a",
    1,
  ],
  "EXAMPLE_ARRAY_COMMA_DELIM": Array [
    "id",
    "email",
    "dateCreated",
    "dateModified",
  ],
  "EXAMPLE_OBJECT": Object {
    "retry": 3,
    "timeout": 1000,
  },
  "LOG_LEVEL": "info",
  "MISSING_TYPE_TRANSFORM": "pass thru          ",
  "NODE_ENV": "test",
  "SERVER_ADDRESS": undefined,
  "SERVER_PORT": 8080,
  "getDefaultOptions": [Function],
  "getOptions": [Function],
  "getRedacted": [Function],
}
`;

exports[`baseline test equal expected output 2`] = `
Object {
  "DB_ENABLE_PROFILER": true,
  "DB_PASSWORD": "XXXXXXXXXX",
  "ENABLE_CORS": true,
  "EXAMPLE_ARRAY": Array [
    "a",
    1,
  ],
  "EXAMPLE_ARRAY_COMMA_DELIM": Array [
    "id",
    "email",
    "dateCreated",
    "dateModified",
  ],
  "EXAMPLE_OBJECT": Object {
    "retry": 3,
    "timeout": 1000,
  },
  "LOG_LEVEL": "info",
  "MISSING_TYPE_TRANSFORM": "pass thru          ",
  "NODE_ENV": "test",
  "SERVER_ADDRESS": undefined,
  "SERVER_PORT": 8080,
}
`;

exports[`baseline test equal expected output 3`] = `
Object {
  "getEnv": [Function],
  "redactedString": "**********",
  "typeTransform": Object {
    "_normalize": [Function],
    "arrayCommaDelim": [Function],
    "boolean": [Function],
    "number": [Function],
    "object": [Function],
    "string": [Function],
  },
}
`;

exports[`baseline test equal expected output 4`] = `
Object {
  "getEnv": [Function],
  "redactedString": "XXXXXXXXXX",
  "typeTransform": Object {
    "_normalize": [Function],
    "arrayCommaDelim": [Function],
    "boolean": [Function],
    "number": [Function],
    "object": [Function],
    "string": [Function],
    "yesNoBool": [Function],
  },
}
`;
